--- a/EmployeePortal/EmployeePortal.csproj
+++ b/EmployeePortal/EmployeePortal.csproj
@@ -128,6 +128,11 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Builder\ConcreteBuilder\DesktopBuilder.cs" />
+    <Compile Include="Builder\ConcreteBuilder\LaptopBuilder.cs" />
+    <Compile Include="Builder\Director\ConfigurationBuilder.cs" />
+    <Compile Include="Builder\IBuilder\ISystemBuilder.cs" />
+    <Compile Include="Builder\Product\ComputerSystem.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -240,6 +245,9 @@
     <Content Include="Views\Employee\Details.cshtml" />
     <Content Include="Views\Employee\Edit.cshtml" />
     <Content Include="Views\Employee\Index.cshtml" />
+    <Content Include="Views\Employee\BuildSystem.cshtml" />
+    <Content Include="Views\Employee\BuildDesktop.cshtml" />
+    <Content Include="Views\Employee\BuildLaptop.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Logger\Logger.csproj">
